--- a/index.html
+++ b/index.html
@@ -23,6 +23,13 @@ html { overflow-y: hidden; }
   <span>
 Welcome to Fembat.org
   </span>
+
+<br>
+<br>
+<span>
+  <a target="_blank" href="gallery.html">- GALLERY -</a>
+  </span>
+
 </div>
         
 </body>
