--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ Welcome to Fembat.org
 <br>
 <br>
 <span>
-  <a target="_blank" href="gallery.html">- GALLERY -</a>
+  <a href="gallery.html">- GALLERY -</a>
   </span>
 
 </div>
