--- a/gallery.html
+++ b/gallery.html
@@ -17,161 +17,161 @@
 
 <div class="gallery">
   <a target="_blank" href="images/AwkwardDork.png">
-    <img src="images/AwkwardDork.png" width="600" height="400">
+    <img src="images/AwkwardDork.png" height="400">
   </a>
   <div class="desc">TheAwkwardDork</div>
 </div>
 
 <div class="gallery">
   <a target="_blank" href="images/BizarreSong.png">
-    <img src="images/BizarreSong.png" width="600" height="400">
+    <img src="images/BizarreSong.png" height="400">
   </a>
   <div class="desc">Bizarre Song</div>
 </div>
 
 <div class="gallery">
   <a target="_blank" href="images/Fan.png">
-    <img src="images/Fan.png" width="600" height="400">
+    <img src="images/Fan.png" height="400">
   </a>
   <div class="desc">FanDrawsArt</div>
 </div>
 
 <div class="gallery">
   <a target="_blank" href="images/Fio1.png">
-    <img src="images/Fio1.png" width="600" height="400">
+    <img src="images/Fio1.png" height="400">
   </a>
   <div class="desc">Fionna Skribbles</div>
 </div>
 
 <div class="gallery">
   <a target="_blank" href="images/Fio2.png">
-    <img src="images/Fio2.png" width="600" height="400">
+    <img src="images/Fio2.png" height="400">
   </a>
   <div class="desc">Fionna Skribbles</div>
 </div>
 
         <div class="gallery">
   <a target="_blank" href="images/Fluffpaws.png">
-    <img src="images/Fluffpaws.png" width="600" height="400">
+    <img src="images/Fluffpaws.png" height="400">
   </a>
   <div class="desc">Fluffpaws</div>
 </div>
 
 <div class="gallery">
   <a target="_blank" href="images/lRUSU1.png">
-    <img src="images/lRUSU1.png" width="600" height="400">
+    <img src="images/lRUSU1.png" height="400">
   </a>
   <div class="desc">lRUSU</div>
 </div>
 
 <div class="gallery">
   <a target="_blank" href="images/lRUSU2.png">
-    <img src="images/lRUSU2.png" width="600" height="400">
+    <img src="images/lRUSU2.png" height="400">
   </a>
   <div class="desc">lRUSU</div>
 </div>
 
 <div class="gallery">
   <a target="_blank" href="images/Mixup.png">
-    <img src="images/Mixup.png" width="600" height="400">
+    <img src="images/Mixup.png" height="400">
   </a>
   <div class="desc">Mix Up</div>
 </div>
 
 <div class="gallery">
   <a target="_blank" href="images/PBP1.png">
-    <img src="images/PBP1.png" width="600" height="400">
+    <img src="images/PBP1.png" height="400">
   </a>
   <div class="desc">Paper Bag Pony</div>
 </div>
 
 <div class="gallery">
   <a target="_blank" href="images/PBP2.png">
-    <img src="images/PBP2.png" width="600" height="400">
+    <img src="images/PBP2.png" height="400">
   </a>
   <div class="desc">Paper Bag Pony</div>
 </div>
 
 <div class="gallery">
   <a target="_blank" href="images/PBP3.png">
-    <img src="images/PBP3.png" width="600" height="400">
+    <img src="images/PBP3.png" height="400">
   </a>
   <div class="desc">Paper Bag Pony</div>
 </div>
 
 <div class="gallery">
   <a target="_blank" href="images/PhantomThorns.png">
-    <img src="images/PhantomThorns.png" width="600" height="400">
+    <img src="images/PhantomThorns.png" height="400">
   </a>
   <div class="desc">Phantom Thorns</div>
 </div>
 
 <div class="gallery">
   <a target="_blank" href="images/Realtra1.png">
-    <img src="images/Realtra1.png" width="600" height="400">
+    <img src="images/Realtra1.png" height="400">
   </a>
   <div class="desc">Realtra</div>
 </div>
 
 <div class="gallery">
   <a target="_blank" href="images/Realtra2.png">
-    <img src="images/Realtra2.png" width="600" height="400">
+    <img src="images/Realtra2.png" height="400">
   </a>
   <div class="desc">Realtra</div>
 </div>
 
 <div class="gallery">
   <a target="_blank" href="images/Saku.png">
-    <img src="images/Saku.png" width="600" height="400">
+    <img src="images/Saku.png" height="400">
   </a>
   <div class="desc">SakuKitty</div>
 </div>
 
 <div class="gallery">
   <a target="_blank" href="images/Whitefang1.png">
-    <img src="images/Whitefang1.png" width="600" height="400">
+    <img src="images/Whitefang1.png" height="400">
   </a>
   <div class="desc">Zack Whitefang</div>
 </div>
 
 <div class="gallery">
   <a target="_blank" href="images/Whitefang2.png">
-    <img src="images/Whitefang2.png" width="600" height="400">
+    <img src="images/Whitefang2.png" height="400">
   </a>
   <div class="desc">Zack Whitefang</div>
 </div>
 
 <div class="gallery">
   <a target="_blank" href="images/Whitefang3.png">
-    <img src="images/Whitefang3.png" width="600" height="400">
+    <img src="images/Whitefang3.png" height="400">
   </a>
   <div class="desc">Zack Whitefang</div>
 </div>
 
 <div class="gallery">
   <a target="_blank" href="images/Whitefang4.png">
-    <img src="images/Whitefang4.png" width="600" height="400">
+    <img src="images/Whitefang4.png" height="400">
   </a>
   <div class="desc">Zack Whitefang</div>
 </div>
 
 <div class="gallery">
   <a target="_blank" href="images/Whitefang5.png">
-    <img src="images/Whitefang5.png" width="600" height="400">
+    <img src="images/Whitefang5.png" height="400">
   </a>
   <div class="desc">Zack Whitefang</div>
 </div>
 
 <div class="gallery">
   <a target="_blank" href="images/Whitefang6.png">
-    <img src="images/Whitefang6.png" width="600" height="400">
+    <img src="images/Whitefang6.png" height="400">
   </a>
   <div class="desc">Zack Whitefang</div>
 </div>
 
 <div class="gallery">
   <a target="_blank" href="images/Whitefang7.png">
-    <img src="images/Whitefang7.png" width="600" height="400">
+    <img src="images/Whitefang7.png" height="400">
   </a>
   <div class="desc">Zack Whitefang</div>
 </div>
